--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,19 @@
 spring.application.name=ApiNaruto
 
-## default connection pool
-spring.datasource.hikari.minimumIdle=3
-spring.datasource.hikari.idleTimeout=30000
-spring.datasource.hikari.maxLifetime=1800000
-
-## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/narutodb
 spring.datasource.username=postgres
 spring.datasource.password=lucas123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.pool-name=MeuHikariPool
 
 # create and drop table, good for testing, production set to none or comment it
 spring.jpa.hibernate.ddl-auto=update
+
+logging.level.com.zaxxer.hikari=DEBUG
+logging.level.org.postgresql=DEBUG
